:heavy_plus_sign: 追加

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,6 +59,14 @@
               <div class="edit_text_modal_form">
                 <div class="form_row">
                   <div class="form_row_label">
+                    アセット名
+                  </div>
+
+                  <input type="text" class="form_input_text" required>
+                </div>  
+
+                <div class="form_row">
+                  <div class="form_row_label">
                     表示内容
                   </div>
 
