--- a/frontend/index.html
+++ b/frontend/index.html
@@ -104,34 +104,36 @@
                     背景色
                   </div>
 
-                  <input type="text" class="form_input_text">
+                  <input type="color" class="form_input_color">
                 </div>  
 
-                <div class="form_row">
-                  <div class="form_row_label">
-                    罫線の種類
-                  </div>
-
-                  <select class="form_select">
-                    <option value="solid">実線</option>
-                  </select>
-                </div>  
-
-                <div class="form_row">
-                  <div class="form_row_label">
-                    罫線の太さ
-                  </div>
-
-                  <input type="number" class="form_input_number">
-                </div>  
-
-                <div class="form_row">
-                  <div class="form_row_label">
-                    罫線の色
-                  </div>
-
-                  <input type="text" class="form_input_text">
-                </div>  
+                <div class="form_columns_row">
+                  <div class="form_row">
+                    <div class="form_row_label">
+                      罫線の種類
+                    </div>
+  
+                    <select class="form_select">
+                      <option value="solid">実線</option>
+                    </select>
+                  </div>  
+  
+                  <div class="form_row">
+                    <div class="form_row_label">
+                      罫線の幅
+                    </div>
+  
+                    <input type="number" class="form_input_number">
+                  </div>  
+  
+                  <div class="form_row">
+                    <div class="form_row_label">
+                      罫線の色
+                    </div>
+  
+                    <input type="color" class="form_input_color">
+                  </div>  
+                </div>
               </div>
 
               <div class="modal_bottom_control">
