--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,19 +101,45 @@
 
                 <div class="form_row">
                   <div class="form_row_label">
-                    背景色
+                    文字色
                   </div>
 
-                  <input type="color" class="form_input_color" v-model="editingAsset.text.backgroundColor">
+                  <input type="color" class="form_input_color" v-model="editingAsset.text.textColor" required>
                 </div>  
 
                 <div class="form_columns_row">
+                  <div class="form_row">
+                    <button class="form_button" type="button" :disabled="editingAsset.text.backgroundColor">背景色を設定</button>
+                  </div>
+                  <div class="form_row">
+                    <button class="form_button" type="button" :disabled="!editingAsset.text.backgroundColor">背景色を削除</button>
+                  </div>
+                </div>
+
+                <div class="form_row" v-if="editingAsset.text.backgroundColor">
+                  <div class="form_row_label">
+                    背景色
+                  </div>
+
+                  <input type="color" class="form_input_color" v-model="editingAsset.text.backgroundColor" required>
+                </div>  
+                
+                <div class="form_columns_row">
+                  <div class="form_row">
+                    <button class="form_button" type="button" :disabled="editingAsset.text.borderEnabled">罫線を設定</button>
+                  </div>
+                  <div class="form_row">
+                    <button class="form_button" type="button" :disabled="!editingAsset.text.borderEnabled">罫線を削除</button>
+                  </div>
+                </div>
+
+                <div class="form_columns_row" v-if="editingAsset.text.borderEnabled">
                   <div class="form_row">
                     <div class="form_row_label">
                       罫線の種類
                     </div>
   
-                    <select class="form_select" v-model="editingAsset.text.borderStyle">
+                    <select class="form_select" v-model="editingAsset.text.borderStyle" required>
                       <option value="solid">実線</option>
                     </select>
                   </div>  
@@ -123,7 +149,7 @@
                       罫線の幅
                     </div>
   
-                    <input type="number" class="form_input_number" v-model="editingAsset.text.borderWidth">
+                    <input type="number" class="form_input_number" v-model="editingAsset.text.borderWidth" min="1" required>
                   </div>  
   
                   <div class="form_row">
@@ -131,7 +157,7 @@
                       罫線の色
                     </div>
   
-                    <input type="color" class="form_input_color" v-model="editingAsset.text.borderColor">
+                    <input type="color" class="form_input_color" v-model="editingAsset.text.borderColor" required>
                   </div>  
                 </div>
               </div>
