:heavy_plus_sign: 追加

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -749,8 +749,8 @@
           <button @click="clickMoveUpwardFrameEvent" :disabled="!selectedFrameEvent || !canMoveUpwardSelected()">上に移動</button>
           <button @click="openPreview()">プレビュー</button>
           アセット：
-          <button @click="clickAddTextAsset()">テキストを追加</button>
-          <button @click="clickAddImageAsset()">画像を追加</button>
+          <button @click="clickAddTextAsset()" @click="clickAddTextAsset">テキストを追加</button>
+          <button @click="clickAddImageAsset()" @click="clickAddImageAsset">画像を追加</button>
           <button @click="clickEditAsset()" :disabled="!selectedAssetId">編集</button>
           <!-- <button @click="clickDeleteAsset()" :disabled="!selectedAssetId">削除</button> -->
           作業：
