--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <title>Editor</title>
     <script src="vue.js" type="text/javascript"></script>
 
+    <script type="text/javascript" src="assets_manager.js"></script>
     <script type="text/javascript" src="compiler.js"></script>
     <script type="text/javascript" src="object_builder.js"></script>
 
@@ -15,27 +16,7 @@
     <script src="./samples/inputtext.js" type="text/javascript"></script>
     <script src="./samples/typing.js" type="text/javascript"></script>
     <script type="text/javascript" src="assets.js"></script>
-    <script type="text/javascript">
-        const AssetsManager = function (initialItems) {
-          const instance = {};
-          instance.items = initialItems;
-          instance.find = function (id) {
-            return instance.items[id];
-          };
-          instance.allIdToAsset = function () {
-            return this.items;
-          };
-          instance.add = function(object) {
-            const maxId = Math.max.apply(
-              null,
-              Object.keys(instance.items)
-            );
-            const newId = maxId + 1;
-            instance.items[newId] = object;
-            return newId;
-          }
-          return instance;
-        };
+    <script type="text/javascript">        
       const assetsManager = AssetsManager(window.dummyAssets);
     </script>
     <script src="editor.js" type="text/javascript"></script>
