--- a/frontend/index.html
+++ b/frontend/index.html
@@ -746,7 +746,7 @@
           <button @click="clickAddTextAsset()" @click="clickAddTextAsset">テキストを追加</button>
           <button @click="clickAddImageAsset()" @click="clickAddImageAsset">画像を追加</button>
           <button @click="clickEditAsset()" :disabled="!selectedAssetId">編集</button>
-          <!-- <button @click="clickDeleteAsset()" :disabled="!selectedAssetId">削除</button> -->
+          <button @click="clickDeleteAsset()" :disabled="!selectedAssetId">削除</button>
           作業：
           <button @click="clickAddTextAsset()">読込</button>
           <button @click="clickAddTextAsset()">保存</button>
