--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,19 +15,13 @@
     <script src="./samples/depth.js" type="text/javascript"></script>
     <script src="./samples/inputtext.js" type="text/javascript"></script>
     <script src="./samples/typing.js" type="text/javascript"></script>
-    <script type="text/javascript" src="assets.js"></script>
-    <script type="text/javascript">        
-      const assetsManager = AssetsManager(window.dummyAssets);
-    </script>
     <script src="editor.js" type="text/javascript"></script>
     <script type="text/javascript">
       window.onbeforeunload = function(event) {
-        // event.preventDefault();
-        // event.returnValue = "";
+        event.preventDefault();
+        event.returnValue = "";
       }
       window.onload = function () {
-        const compiler = Compiler(assetsManager);
-        compiler.compile(window.frameEventsTyping); // 整形済みデータになったら不要
         initEditor();
       };
     </script>
