--- a/frontend/index.html
+++ b/frontend/index.html
@@ -521,6 +521,15 @@
                       <button class="form_button" type="button" @click="onClickCentering">左右中央</button>
                     </div>
                   </div>
+                  
+                  <div class="form_columns_row" v-if="editingFrameEvent.type === 'putImage'">
+                    <div class="form_row">
+                      <button class="form_button" type="button" @click="onClickAutoWidth">高さに合わせて幅を設定</button>
+                    </div>
+                    <div class="form_row">
+                      <button class="form_button" type="button" @click="onClickAutoHeight">幅に合わせて高さを設定</button>
+                    </div>
+                  </div>
 
                   <template v-if="editingFrameEvent.lastKeyFrame && editingFrameEvent.lastKeyFrame.layoutOptions">
                     <div class="form_columns_row">
