--- a/frontend/src/editor/editor.html
+++ b/frontend/src/editor/editor.html
@@ -88,7 +88,6 @@
                   </div>  
                 </div>
 
-                
                 <div class="form_columns_row">
                   <div class="form_row">
                     <div class="form_row_label">
@@ -122,6 +121,16 @@
                   </div>
                 </div>
 
+                <div class="form_columns_row">
+                  <div class="form_row">
+                    <div class="form_row_label">
+                      フォント
+                    </div>
+
+                    <input type="text" class="form_input_text" v-model="editingAsset.text.fontFamily">
+                  </div>                  
+                </div>
+                
                 <div class="form_columns_row">
                   <div class="form_row">
                     <button class="form_button" type="button" :disabled="editingAsset.text.backgroundColor" @click="clickEnableBackgroundColor">背景色を設定</button>
