--- a/frontend/src/editor/editor.html
+++ b/frontend/src/editor/editor.html
@@ -103,9 +103,9 @@
                     </div>
 
                     <select class="form_select" v-model="editingAsset.text.align" required>
-                      <option value="left">left</option>
-                      <option value="center">center</option>
-                      <option value="right">right</option>
+                      <option value="left">左</option>
+                      <option value="center">中央</option>
+                      <option value="right">右</option>
                     </select>
                   </div>
 
